--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             month: parseInt(startDateParts[1]),
             day: parseInt(startDateParts[2]),
           };
+          console.log(startDate);
           let repayments = computeRepaymentTimeline(
             loanAmount,
             parseFloat(interestRate),
@@ -99,80 +100,157 @@
       }
 
       // loan repayment timeline
-      function computeRepaymentTimeline(loanAmount, interestRate, startDate) {
+      function computeRepaymentTimeline(
+        loanAmount,
+        interestRatePerAnnum,
+        startDateStr
+      ) {
+        const monthlyInterestRate = interestRatePerAnnum / 12;
+        loanAmount = parseFloat(loanAmount);
+
         let today = new Date(
-          Date.UTC(startDate.year, startDate.month - 1, startDate.day)
+          startDateStr.year,
+          startDateStr.month - 1,
+          startDateStr.day
         );
-        let currentDay = today.getUTCDate();
-        let currentMonth = today.getUTCMonth() + 1;
-        let currentYear = today.getUTCFullYear();
-        let dailyInterestRate = interestRate / 365;
+        let currentYear = today.getFullYear();
         let firstPaymentMonth;
-        let firstPaymentYear;
-        if (currentDay <= 10) {
-          firstPaymentMonth = currentMonth + 1;
-          firstPaymentYear = currentYear;
+        let interestYear = today.getFullYear();
+        let previousMonth;
+
+        if (today.getDate() <= 10) {
+          firstPaymentMonth = today.getMonth() + 1;
         } else {
-          firstPaymentMonth = currentMonth + 2;
-          firstPaymentYear = currentYear;
+          firstPaymentMonth = today.getMonth() + 2;
         }
-        if (firstPaymentMonth > 12) {
+
+        if (firstPaymentMonth > 11) {
           firstPaymentMonth -= 12;
-          firstPaymentYear += 1;
+          currentYear += 1;
         }
-        let repayments = {};
-        let interestAmount = 0;
+
+        const repayments = {};
+
         for (let i = 0; i < 12; i++) {
-          let paymentDate = new Date(
-            Date.UTC(firstPaymentYear, firstPaymentMonth - 1, 7)
+          const paymentDate = new Date(currentYear, firstPaymentMonth, 7);
+          const nextYearAnniversary = new Date(today);
+          nextYearAnniversary.setFullYear(
+            nextYearAnniversary.getFullYear() + 1
           );
-          if (i < 11) {
-            let interestEndDate = new Date(
-              Date.UTC(
-                paymentDate.getUTCFullYear(),
-                paymentDate.getUTCMonth(),
-                0
-              )
-            );
-            let interestDays =
-              Math.ceil((interestEndDate - today) / (1000 * 60 * 60 * 24)) + 1;
-            interestAmount += loanAmount * dailyInterestRate * interestDays;
-            let key = formatDate(paymentDate);
-            repayments[key] = Math.round(interestAmount * 100) / 100;
-            today = new Date(
-              Date.UTC(
-                paymentDate.getUTCFullYear(),
-                paymentDate.getUTCMonth(),
-                1
-              )
-            );
-            interestAmount = 0;
-          } else {
-            let finalPaymentDate = new Date(
-              Date.UTC(startDate.year, startDate.month - 1, startDate.day)
-            );
-            finalPaymentDate.setUTCFullYear(
-              finalPaymentDate.getUTCFullYear() + 1
-            );
-            if (finalPaymentDate < today) {
-              finalPaymentDate = new Date(today);
-            }
-            let interestDays =
-              Math.ceil((finalPaymentDate - today) / (1000 * 60 * 60 * 24)) + 1;
-            let finalMonthInterest =
-              loanAmount * dailyInterestRate * interestDays;
-            let key = formatDate(finalPaymentDate);
-            repayments[key] =
-              Math.round((finalMonthInterest + parseFloat(loanAmount)) * 100) /
-              100;
+
+          if (paymentDate > nextYearAnniversary) break;
+
+          previousMonth = firstPaymentMonth - 1;
+          if (previousMonth < 0) {
+            previousMonth = 11;
+            interestYear = currentYear - 1;
           }
+
+          const daysInMonth = new Date(
+            currentYear,
+            firstPaymentMonth + 1,
+            0
+          ).getDate();
+          let interestAmount;
+
+          if (i === 0) {
+            if (today.getDate() <= 10) {
+              const daysInCurrentMonth = daysInMonth - today.getDate() + 1;
+              const dailyInterestRate = monthlyInterestRate / daysInMonth;
+              interestAmount =
+                loanAmount * dailyInterestRate * daysInCurrentMonth;
+            } else {
+              const daysInCurrentMonth = daysInMonth - today.getDate() + 1;
+              const dailyInterestRateCurrentMonth =
+                monthlyInterestRate / daysInMonth;
+              const interestAmountCurrentMonth =
+                loanAmount * dailyInterestRateCurrentMonth * daysInCurrentMonth;
+
+              const daysInNextMonth = new Date(
+                today.getFullYear(),
+                today.getMonth() + 1,
+                0
+              ).getDate();
+              const dailyInterestRateNextMonth =
+                monthlyInterestRate / daysInNextMonth;
+              const interestAmountNextMonth =
+                loanAmount * dailyInterestRateNextMonth * daysInNextMonth;
+
+              interestAmount =
+                interestAmountCurrentMonth + interestAmountNextMonth;
+            }
+          } else {
+            const dailyInterestRate = monthlyInterestRate / daysInMonth;
+            interestAmount = loanAmount * dailyInterestRate * daysInMonth;
+          }
+
+          const paymentDateStr = paymentDate.toLocaleDateString("en-US", {
+            day: "numeric",
+            month: "long",
+            year: "numeric",
+          });
+          repayments[paymentDateStr] = Math.round(interestAmount * 100) / 100;
+
           firstPaymentMonth += 1;
-          if (firstPaymentMonth > 12) {
+          if (firstPaymentMonth > 11) {
             firstPaymentMonth -= 12;
-            firstPaymentYear += 1;
+            currentYear += 1;
           }
         }
-        let totalPayment = Object.values(repayments).reduce((a, b) => a + b, 0);
+
+        previousMonth = today.getMonth() - 1;
+        if (previousMonth < 0) {
+          previousMonth = 11;
+          interestYear = today.getFullYear() - 1;
+        }
+        const daysInPreviousMonth = new Date(
+          interestYear,
+          previousMonth + 1,
+          0
+        ).getDate();
+        const previousMonthInterest =
+          ((loanAmount * monthlyInterestRate) / daysInPreviousMonth) *
+          daysInPreviousMonth;
+
+        const lastInterestDays = today.getDate();
+        const daysInAnniversaryMonth = new Date(
+          today.getFullYear() + 1,
+          today.getMonth() + 1,
+          0
+        ).getDate();
+        const lastDailyInterestRate =
+          monthlyInterestRate / daysInAnniversaryMonth;
+        const lastMonthInterest =
+          loanAmount * lastDailyInterestRate * lastInterestDays;
+
+        const anniversaryPaymentDate = new Date(today);
+        anniversaryPaymentDate.setFullYear(
+          anniversaryPaymentDate.getFullYear() + 1
+        );
+        const anniversaryPaymentDateStr =
+          anniversaryPaymentDate.toLocaleDateString("en-US", {
+            day: "numeric",
+            month: "long",
+            year: "numeric",
+          });
+
+        if (today.getDate() <= 7) {
+          if (repayments[anniversaryPaymentDateStr]) {
+            repayments[anniversaryPaymentDateStr] +=
+              Math.round(lastMonthInterest * 100) / 100 +
+              Math.round(previousMonthInterest * 100) / 100 +
+              loanAmount;
+          } else {
+            repayments[anniversaryPaymentDateStr] =
+              Math.round(lastMonthInterest * 100) / 100 +
+              Math.round(previousMonthInterest * 100) / 100 +
+              loanAmount;
+          }
+        } else {
+          repayments[anniversaryPaymentDateStr] =
+            Math.round(lastMonthInterest * 100) / 100 + loanAmount;
+        }
+
         return repayments;
       }
 
